<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitys.PrincipalActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textSaudacaoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/carregando"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSaldoGeralId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reais"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarViewId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:mcv_selectionColor="#ffffff"
        app:mcv_showOtherDates="all"
        app:mcv_tileSize="50dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerMovimentosId"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>